--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,6 +10,8 @@ html, body {
     min-height: 100%;
     overflow:auto;
     padding-bottom: 180px;
+    background-color: black;
+    color: white;
 }
 
 a {
@@ -108,4 +110,16 @@ td {
 #importe {
     font-size: 70px;
     vertical-align: middle;
+}
+
+#map-canvas {
+    width: 100%;
+    height: 100%;
+    position: relative;
+ }
+
+path {
+    stroke: white;
+    stroke-width: 0.25px;
+    fill: grey;
 }
