--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,21 +1,22 @@
 * {
     margin: 0;
+    box-sizing: border-box;
+
 }
-html, body {
+body {
+    background: rgb(35,35,40);
+    color: white;
+    font-family: sans-serif;
+    height: 100%;   
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-animation: fadeBody 1s ease-in;
     -moz-animation: fadeBody 1s ease-in;
-    font-family: sans-serif;
-    height: 100%;
-    background: #272a31;
-    color: white;
 }
 .wrapper {
-    min-height: 100%;
-    overflow:auto;
-    background: #272a31;
     color: white;
+    overflow:auto;
+    min-height: 100%;
 }
 
 a {
@@ -125,22 +126,27 @@ path {
 }
 
 .container_grafico {
-text-align: center;
-box-sizing:border-box;
+    text-align: center;
+    padding-bottom: 15px;
+    padding-top: 15px;
 }
 
 .widget{
-    background: #45464D;
+    background: rgb(62,60,65);
+    border-radius: 2px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.4);
+
 }
 .titulo_grafico {
+    border-bottom: 2px solid rgba(0,0,0,0.2);
+    color:#ccc;
     float: none;
-    width: 100%;
-    vertical-align: middle;
     font-family: "Roboto-Medium";
     font-size: 15px;
-    padding-bottom: 10px;
-    text-transform: uppercase;
+    padding: 30px 0 25px;
     text-align: center;
+    text-transform: uppercase;
+    width: 100%;
 }
 
 .grafico {
