--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,14 @@
     box-sizing: border-box;
 
 }
+
+@font-face {
+    font-family: 'titilliumBold';
+    src: url('/static/fonts/TitilliumText25L002-webfont.ttf') format('truetype');
+
+}
+
+
 body {
     background: rgb(35,35,40);
     color: white;
@@ -31,8 +39,10 @@ a {
 }
 
 #tabla {
-    font-family: "courier new", Courier;
     font-size: 14px;
+    table-layout: fixed;
+    width: 100%;
+    word-wrap: break-word;
 }
 
 thead {
@@ -49,9 +59,11 @@ tr {
 
 th {
     font-weight: normal;
-    font-size: 14px;
-    border-bottom: 1px dashed white;
-    padding: 12px 17px;
+    font-size: 12px;
+    border-bottom: 2px solid rgba(0,0,0,0.2);
+    padding: 40px 10px 20px;
+    font-family: "Roboto-Medium";
+    color: #e6e6e6;
 }
 
 tbody {
@@ -61,7 +73,19 @@ tbody {
 }
 
 td {
-    padding: 7px 17px;
+    color: #e6e6e6;
+    font-size: 12px;
+    padding: 10px 10px;
+    text-align: center;
+
+}
+
+.redSign{
+    color:#e6503c;
+}
+
+.greenSign{
+    color: #96cc5a;
 }
 
 .pie {
@@ -83,34 +107,43 @@ td {
     border-top: 1px dashed white;
 }
 
-.total_izquierda {
-    padding-top: 40px;
-    border-left: 1px dashed white;
-    height: 100%;
+.bottomLine{
+    background: rgba(0,0,0,0.8);
+    bottom: 5%;
+    box-shadow: 0 2px 2px rgba(0,0,0,0.3);
+    height: 50px;
+    position: fixed;
+    width: 100%;
 }
 
+.total_izquierda {
+    height: 100%;
+}
+.rightWidget{
+    background: #3C3D44;
+    box-sizing: border-box;
+    height: 200px;
+    text-align: center;
+    }
+
+.rightWidget h1{
+    color: #e6e6e6;
+    font-family: 'Roboto-Thin';
+    font-size: 40px;
+    font-weight: normal;
+    padding-top: 60px;
+}
+
+.rightWidget span{
+    width: 100%;
+    vertical-align: middle;
+    font-family: 'Roboto';
+    font-size: 20px;
+    padding-bottom: 10px;
+}
 .total_derecha {
     padding-top: 40px;
     height: 100%;
-}
-
-.titulo_total {
-    float: none;
-    width: 100%;
-    vertical-align: middle;
-    font-family: "courier new", Courier;
-    font-size: 25px;
-    padding-bottom: 10px;
-}
-
-#transacciones {
-    font-size: 70px;
-    vertical-align: middle;
-}
-
-#importe {
-    font-size: 70px;
-    vertical-align: middle;
 }
 
 #map-canvas {
