--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -108,12 +108,89 @@ td {
 }
 
 .bottomLine{
-    background: rgba(0,0,0,0.8);
-    bottom: 5%;
+    background: rgba(59,60,67,0.98);
+    bottom: 10%;
     box-shadow: 0 2px 2px rgba(0,0,0,0.3);
+    box-sizing: border-box;
     height: 50px;
+    overflow: hidden;
     position: fixed;
     width: 100%;
+    white-space: nowrap;
+}
+
+.mapView{
+    position: relative; 
+    width: 80%; 
+    height: 80%;
+    margin: 0 auto;
+}
+
+/* @group Marquee */
+
+.marquee div {
+    display: block;
+    width: 200%;        
+    position: absolute;
+    overflow: hidden;
+    
+    -webkit-animation: marquee 20s linear infinite;
+    -moz-animation: marquee 20s linear infinite;
+    -ms-animation: marquee 20s linear infinite;
+    -o-animation: marquee 20s linear infinite;
+    animation: marquee 20s linear infinite;
+}
+.marquee section {
+    float: left;
+    width: 50%;
+}
+    
+@-webkit-keyframes marquee {
+    0% { left: 0; }
+    100% { left: -100%; }
+}
+@-moz-keyframes marquee {
+    0% { left: 0; }
+    100% { left: -100%; }
+}
+@-ms-keyframes marquee {
+    0% { left: 0; }
+    100% { left: -100%; }
+}
+@-o-keyframes marquee {
+    0% { left: 0; }
+    100% { left: -100%; }
+}
+@keyframes marquee {
+    0% { left: 0; }
+    100% { left: -100%; }
+}
+
+/* @end */
+
+
+span.barTitle {
+color: #fbb03b;
+font-family: 'Roboto-Medium';
+font-size: 14px;
+padding: 15px 20px 10px 40px;
+display: inline-block;
+text-transform: uppercase;
+}
+span.barElement {
+color: rgba(250,250,250,0.8);
+font-family: 'roboto-Medium';
+font-size: 14px;
+display: inline-block;
+padding: 0 10px;
+}
+
+.poweredby{
+    width: 140px;
+    position: absolute;
+    bottom: 5%;
+    margin-bottom: -15px;
+    right: 20px;
 }
 
 .total_izquierda {
