--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,46 +62,43 @@ a {
     padding-left: 20px;
 }
 
-#tabla {
+.tableLog{
+    height: 100%;
+    overflow: hidden;
+}
+
+.ofScroll{
     font-size: 14px;
-    table-layout: fixed;
     width: 100%;
     word-wrap: break-word;
+
+}
+.ofScroll tbody, .ofScroll thead{
+    display: block; 
 }
 
-thead {
-    display: table-header-group;
-    vertical-align: middle;
-    border-color: white;
+.ofScroll tbody{
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 80%;
 }
-
-tr {
-    display: table-row;
-    vertical-align: inherit;
-    border-color: white;
+.ofScroll tbody td, .ofScroll thead th{
+    color: #e6e6e6;
+    font-weight: normal;
+    font-size: 12px;
+    width: 20%;
 }
 
 th {
-    font-weight: normal;
-    font-size: 12px;
     border-bottom: 2px solid rgba(0,0,0,0.2);
     padding: 40px 10px 20px;
     font-family: "Roboto-Medium";
-    color: #e6e6e6;
-}
-
-tbody {
-    display: table-row-group;
-    vertical-align: middle;
-    border-color: inherit;
 }
 
 td {
-    color: #e6e6e6;
     font-size: 12px;
     padding: 10px 10px;
     text-align: center;
-
 }
 
 .redSign{
@@ -113,7 +110,6 @@ td {
 }
 
 .pie {
-    font-family: "courier new", Courier;
     font-size: 40px;
     bottom: 0;
     width: 100%;
@@ -203,7 +199,7 @@ text-transform: uppercase;
 }
 span.barElement {
 color: rgba(250,250,250,0.8);
-font-family: 'roboto-Medium';
+font-family: 'Roboto-Medium';
 font-size: 14px;
 display: inline-block;
 padding: 0 10px;
