--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -98,11 +98,11 @@ td {
 .helperItem{
     opacity: 0;
     position: absolute;
-    right: 0px;
-    top: 20px;
+    right: -10px;
+    top: -10px;
     background: rgba(27, 25, 29, 1);
     padding: 10px;
-    border-radius: 6px 0 6px 6px;
+    border-radius: 6px 0 0 6px;
     visibility: hidden;
     z-index: 10;
 }
