muestra excepcion de transaccion

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -110,10 +110,22 @@ td {
 
 }
 
-.helperP:hover > .helperItem {
+.helperP:hover > .helperItem,.helperP:hover > .except {
     visibility: visible;
     opacity: 1;
     transition: opacity .2s ease-in-out .2s;
+}
+
+.except{
+    opacity: 0;
+    position: absolute;
+    left: 30px;
+    top: -10px;
+    background: rgba(27, 25, 29, 1);
+    padding: 10px;
+    border-radius: 0 6px 6px 0;
+    visibility: hidden;
+    z-index: 10;
 }
 
 .helperP{
@@ -126,6 +138,7 @@ td {
 
 .redSign{
     color:#e6503c;
+    position: relative;
 }
 
 .greenSign{
