--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -45,10 +45,8 @@ body {
     -webkit-animation: fadeBody 1s ease-in;
     -moz-animation: fadeBody 1s ease-in;
 }
-.wrapper {
-    color: white;
-    overflow:auto;
-    min-height: 100%;
+#wrapper {
+    margin-top: 40px;
 }
 
 a {
@@ -82,17 +80,40 @@ a {
     font-weight: normal;
 }
 
+.overMessage{
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    background: rgb(35,35,40);
+    z-index: 10;
+    padding: 20% 0;
+
+}
+.overMessage p{
+    color: rgba(255,255,255,0.54);
+}
+.loader{
+    height: 60px;
+margin: 10px 0 20px;
+}
+
 th {
-    border-bottom: 2px solid rgba(0,0,0,0.2);
-    padding: 40px 10px 20px;
-    font-family: "Roboto-Medium";
+    padding: 15px 20px 12px;
+    font-family: "Roboto-Bold";
+    color: rgb(144, 144, 144);
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-size: 13px;
 }
 
 td {
-    font-size: 12px;
-    padding: 10px 10px;
+    font-size: 0.9em;
+    padding: 10px 0px;
     text-align: center;
     white-space: nowrap;
+    color: rgb(210, 210, 210);
+    font-family: "Roboto-Medium";
 }
 
 .helperItem{
@@ -406,3 +427,14 @@ bottom: 5%;
         height: auto;
         font-size: 10px;
         text-shadow: 0 1px 2px rgba(0, 0, 0, .8);
+}
+
+
+.dataTables_scrollBody{
+    background: rgb(42,44,49);
+}
+
+.dataTables_scrollHead{
+    background: rgb(62, 65, 71);
+    border-bottom: 2px solid rgba(0,0,0,0.4);
+}
